<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InfoPortal</string>
    <string name="news">今日北科</string>
    <string name="build_name">楼名</string>
    <string name="build_name1">逸夫楼</string>
    <string name="build_name2">教学楼</string>
    <string name="floor_name">楼层</string>
    <string name="class_name">节次</string>
    <string name="search_button">确定</string>
    <string name="room_search">教室搜索</string>
    <string name="room_search_result">教室搜索结果</string>
    <string name="editor_name">教室: </string>
    <string name="set_date">设置时间</string>
    <string name="current_classes">当前无课教室</string>
    <string name="from">从</string>
    <string name="to">到</string>
    <string name="settings_label">设置</string>
    <string name="settings_shortcut">s</string>
    <string name="about_label">关于</string>
    <string name="about_shortcut">a</string>
    <string name="about_label_summary">查看此软件的相关信息</string>
    <string name="quit_label">退出</string>
    <string name="quit_shortcut">q</string>
    <string name="refresh_label">刷新</string>
    <string name="refresh_shortcut">r</string>
    <string name="advise">意见建议</string>
    <string name="feed_back">意见反馈</string>
    <string name="feed_back_summary">反馈错误的教室，以及对此软件的意见，帮助我们改进。</string>
    <string name="db_settings">无课表设置</string>
    <string name="db_update">更新数据</string>
    <string name="db_update_summary">手动获取最新无课教室数据</string>
    <string name="db_initialize">初始化数据</string>
    <string name="db_initialize_summary">将无课表数据还原成新安装时的状态</string>
    <string name="others">其它</string>
    <string name="help">帮助</string>
    <string name="help_summary">提供一些简单的操作技巧</string>
    <string name="feed_back_title">在此留下你的意见：</string>
    <string name="post_button">提交</string>
    <string name="cancel_button">取消</string>
    <string name="empty">Sorry,没有符合要求的教室。</string>
    <string name="initialize_title">欢迎使用iBeiKe信息门户</string>
    <string name="about_title">iBeiKe信息门户</string>
    <string name="about_text">提供对无课表内容特定时间，特定楼层的搜索，方便同学们上自习。\n
    	同时提供校园最新动态，第一时间得到最新的消息。\n</string>
    <string name="copy_text">Copyright © 2001-2011 iBeiKe All Rights Reserved\n</string>
    <string name="scan">扫描</string>
    <string name="back">返回</string>
    <string name="lib_search_tip">名称或ISBN码</string>
    <string name="book_author">责任者</string>
    <string name="book_num">索书号</string>
    <string name="book_publisher">出版信息</string>
    <string name="searching">正在查询...</string>
    <string name="book_list_null">本馆没有您检索的馆藏书目</string>
    <string name="lib_time_title">开放时间:</string>
    <string name="lib_borrow_title">当前借阅:</string>
    <string name="out_of_term">查询时间超出本地存储的无课表数据范围，请修改查询时间或者更新无课表数据。</string>
    <string name="ok">确定</string>
    <string name="room_info_title1">一周教室使用情况</string>
    <string name="have">有</string>
    <string name="none">无</string>
    <string name="build_spinner_name">楼名: </string>
    <string name="room_search_none">在所选时间，没有此教室的数据，请换其他教室查询或者更改查询时间。</string>
    <string name="room_search_error">输入格式有误，请重新输入教室房间号。</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="more">更多...</string>
    <string name="book_total">馆藏:</string>
    <string name="book_left">可借:</string>
    <string name="lib_borrow">借出日期:</string>
    <string name="lib_return">应还日期:</string>
    <string name="lib_username_tip">输入学号或邮箱</string>
    <string name="lib_password_tip">密码</string>
    <string name="encrypt_error">加密时产生错误，请重新输入密码。</string>
    <string name="decrypt_error">解密时产生错误，请重新输入密码。</string>
    <string name="reborrow">续借</string>
    <string name="login">登录</string>
    <string name="logining">正在登录...</string>
    <string name="login_faile">登录失败，请检查用户名密码后重新登录</string>
    <string name="camp_title">校园卡信息</string>
    <string name="camp_stu_info">学生基本信息</string>
    <string name="camp_stu_name">姓名:</string>
    <string name="camp_stu_id">学号:</string>
    <string name="camp_card_id">卡号:</string>
    <string name="camp_card_cur">当前卡状态:</string>
    <string name="camp_card_dis">卡户冻结状态:</string>
    <string name="camp_detail">消费记录</string>
    <string name="camp_username_tip">您的工号、学号或别名</string>
    <string name="camp_password_tip">缺省密码:身份证后6位</string>
    <string name="camp_time">时间:</string>
    <string name="camp_place">地点:</string>
    <string name="camp_cost">消费:</string>
    <string name="camp_left">余额:</string>
    <string name="camp_type_day">当前</string>
    <string name="camp_type_mon">当月</string>
    <string name="camp_type_lastmon">上月</string>
    <string name="camp_type_year">今年</string>
</resources>
