<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">	
	<RadioGroup 
		android:id="@+id/RadioGroup" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dip"
		android:orientation="horizontal"
		android:checkedButton="@+id/radio_building1">
		
		<RadioButton
			android:id="@+id/radio_building1"
			android:text="@string/build_name1"
		/>	
		<RadioButton
			android:id="@+id/radio_building2"
			android:text="@string/build_name2"
		/>	
	</RadioGroup>
	<TextView
		android:id="@+id/editor_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dip"
		android:layout_below="@+id/RadioGroup"
		android:text="@string/editor_name" />
	<EditText
		android:id="@+id/text_edit"
		android:layout_width="100dip"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dip"
		android:layout_below="@+id/RadioGroup"
		android:layout_toRightOf="@+id/editor_name"
		android:numeric="integer"
		android:maxLength="3"/>
	<Button 
		android:id="@+id/btn_OK" 
		android:layout_width="70dip" 
		android:text="@string/search_button" 
		android:layout_toRightOf="@+id/text_edit"
		android:layout_below="@+id/RadioGroup"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dip" />
	<TextView
		android:id="@+id/room_result"
		android:textSize="12dip"
		android:layout_width="270dip"
		android:layout_margin="5dip"
		android:layout_height="wrap_content"
		android:layout_below="@+id/text_edit" />
</RelativeLayout>