<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/body_background"
    android:orientation="vertical" >

  	 <!-- Header -->
  	 <include layout="@layout/header_search"/>
  	 
	<TextView
		android:id="@+id/camp_info_title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/camp_stu_info"
	    android:padding="3dip"
	    android:background="#65999999"
	    android:textColor="@color/status_text"
	    android:textStyle="bold"
	/>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
		<LinearLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:orientation="horizontal">
	    	<TextView 
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	        	android:gravity="center"
	    	    android:text="@string/camp_stu_name"
	    	    android:textStyle="bold"
	    	    android:textColor="@color/black"/>
	    	<TextView 
	    	    android:id="@+id/camp_stu_name"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	        	android:gravity="center"
	    	    android:textStyle="bold"
	    	    android:textColor="@color/black"/>
	    	<TextView 
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	        	android:gravity="center"
	    	    android:text="@string/camp_stu_id"
	    	    android:textStyle="bold"
	    	    android:textColor="@color/black"/>
	    	<TextView 
	    		android:id="@+id/camp_stu_id"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:gravity="center"
	    		android:textColor="@color/black"/>
	    	<TextView 
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	        	android:gravity="center"
	    	    android:text="@string/camp_card_id"
	    	    android:textStyle="bold"
	    	    android:textColor="@color/black"/>
	    	<TextView 
	    		android:id="@+id/camp_card_id"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:gravity="center"
	    		android:textColor="@color/black"/>
	    </LinearLayout>
		<LinearLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:orientation="horizontal">
	    	<TextView 
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	        	android:gravity="center"
	    	    android:text="@string/camp_card_left"
	    	    android:textStyle="bold"
	    	    android:textColor="@color/black"/>
	    	<TextView 
	    	    android:id="@+id/camp_card_left"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	        	android:gravity="center"
	    	    android:textStyle="bold"
	    	    android:textColor="@color/black"/>
	    	<TextView 
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	        	android:gravity="center"
	    	    android:text="@string/camp_card_cur"
	    	    android:textStyle="bold"
	    	    android:textColor="@color/black"/>
	    	<TextView 
	    		android:id="@+id/camp_card_cur"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:gravity="center"
	    		android:textColor="@color/black"/>
	    	<TextView 
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	        	android:gravity="center"
	    	    android:text="@string/camp_card_dis"
	    	    android:textStyle="bold"
	    	    android:textColor="@color/black"/>
	    	<TextView 
	    		android:id="@+id/camp_card_dis"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:gravity="center"
	    		android:textColor="@color/black"/>
	    </LinearLayout>
	</LinearLayout>
	<TextView
		android:id="@+id/camp_cost_dm"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/camp_cost_dm"
	    android:padding="3dip"
	    android:background="#65999999"
	    android:textColor="@color/status_text"
	    android:textStyle="bold" />
	<RelativeLayout 
	    android:id="@+id/camp_login"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:visibility="gone">
		<TextView
	    	android:id="@+id/camp_username_name"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="10dip"
	    	android:text="@string/username"
	    	android:textColor="@color/black"
	    	android:textStyle="bold" />
		<EditText 
		    android:id="@+id/camp_username"
		    android:layout_width="200dip"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@id/camp_username_name"
		    android:hint="@string/camp_username_tip"
		    android:layout_marginLeft="10dip"
		    android:inputType="text" />
		<TextView
	    	android:id="@+id/camp_password_name"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="10dip"
	    	android:layout_below="@id/camp_username"
	    	android:text="@string/password"
	    	android:textColor="@color/black"
	    	android:textStyle="bold" />
		<EditText 
		    android:id="@+id/lib_password"
		    android:layout_width="200dip"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@id/camp_username"
		    android:layout_below="@id/camp_username"
		    android:hint="@string/camp_password_tip"
		    android:inputType="textPassword" />
		<Button 
		    android:id="@+id/lib_login_button"
		    android:layout_width="80dip"
		    android:layout_height="wrap_content"
		    android:text="@string/login"
		    android:layout_alignLeft="@id/lib_password"
		    android:layout_below="@id/lib_password"/>
		<ProgressBar
		    android:id="@+id/lib_login_progress"
		    android:layout_width="20dip"
		    android:layout_height="20dip"
		    android:layout_toRightOf="@id/lib_login_button"
		    android:layout_below="@id/lib_password"
		    android:layout_marginTop="15dip"
		    android:layout_marginLeft="5dip"
		    style="?android:attr/progressBarStyleLarge"
		    mce_style="?android:attr/progressBarStyleLarge"
		    android:visibility="gone" />
		<TextView 
		    android:id="@+id/lib_login_status"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:width="120dip"
		    android:layout_marginLeft="5dip"
		    android:layout_below="@id/lib_password"
		    android:layout_toRightOf="@id/lib_login_progress"
		    android:layout_alignTop="@id/lib_login_progress"
		    android:visibility="gone"/>
	</RelativeLayout>
	<ListView
	    android:id="@+id/camp_card_list"
	  	android:layout_width="fill_parent"
	  	android:layout_height="fill_parent"
 	    android:cacheColorHint="#00000000"
	    android:fadeScrollbars="true"
    	android:divider="@drawable/dashed_line"
    	android:dividerHeight="1dip"
    	android:fastScrollEnabled="true"
	/>
</LinearLayout>