<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dip">
	<LinearLayout
    	xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/camp_time"
        	android:textStyle="bold"
        android:textColor="@color/black"
        	android:textSize="14dip"/>
    	<TextView 
        	android:id="@+id/camp_time"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        android:textColor="@color/black"
        	android:textStyle="bold"
        	android:textSize="14dip"/>
    </LinearLayout>
	<LinearLayout
    	xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/camp_place"
        android:textColor="@color/black"
        	android:textStyle="bold"
        	android:textSize="14dip"/>
    	<TextView 
        	android:id="@+id/camp_place"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        android:textColor="@color/black"
        	android:textSize="14dip"/>
    </LinearLayout>
	<LinearLayout
    	xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        android:textColor="@color/black"
        	android:text="@string/camp_cost"
        	android:textStyle="bold"
        	android:textSize="14dip"/>
    	<TextView 
       	 	android:id="@+id/camp_cost"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        android:textColor="@color/black"
        	android:layout_marginRight="4dp"
        	android:textSize="12dip"/>
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="15dip"
        android:textColor="@color/black"
        	android:text="@string/camp_left"
        	android:textStyle="bold"
        	android:textSize="14dip"/>
    	<TextView 
        	android:id="@+id/camp_left"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        android:textColor="@color/black"
        	android:textSize="12dip"/>
    </LinearLayout>
</LinearLayout>